--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TypeSpeed</title>
+    <title>Typora</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="fav.icon" />
+    <link rel="icon" href="fav.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -54,7 +54,7 @@
             <button class="start action-btn">Start</button>
             <button class="pause action-btn">Pause</button>
             <button class="resume action-btn">Resume</button>
-            <button class="stop action-btn">Stop</button>
+            <button class="reset action-btn">Reset</button>
             <button class="replay action-btn">Replay</button>
           </div>
           <div class="timer-selector">
